2006-02-19  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (gcjtreeiter/gij.sh): Create gcjtreeiter directory
	before creating gcjtreeiter/gij.sh.

2006-02-06  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (clean-local): Delete.
	(gcjtreeiter/IterTest.class): Separate out as explict rule.  Add
	to CLEANFILES.
	(TESTS_ENVIRONMENT): Send output to /dev/null.

	* Makefile.am (TESTS_ENVIRONMENT): Skip tests when no display.

2006-01-30  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (textiter/a.out): Delete reference to /opt/frysk.

2006-01-05  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am: Based on frysk-impots/tests/Makefile.am.
	* gcjtreeiter/.cvsignore: Copied from frysk-imports/tests/.
	* gcjtreeiter/IterTest.java: Ditto.
	* textiter/.cvsignore: Ditto.
	* textiter/JNICrash.java: Ditto.
	* .cvsignore: New.

Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End: