@@ -90,3 +90,32 @@ gcjtreeiter/gij.sh: $(gcjtreeiter_FILES)
 		gcjtreeiter.IterTest \
 		> gcjtreeiter/gij.sh
 	chmod a+x gcjtreeiter/gij.sh
+
+glibtimer_FILES = glibtimer/TestGlibTimerGC.java
+EXTRA_DIST += $(glibtimer_FILES)
+XFAIL_TESTS += glibtimer/a.out
+glibtimer/a.out: $(glibtimer_FILES)
+	mkdir -p glibtimer
+	$(GCJ) -g \
+		-classpath $(FRYSK_GTK_CLASSPATH) \
+		$(FRYSK_GTK_LIBS) \
+		-Wl,-rpath,/usr/lib/frysk \
+		-Djava.library.path=/usr/lib/frysk \
+		--main=glibtimer.TestGlibTimerGC \
+		$(srcdir)/glibtimer/TestGlibTimerGC.java \
+		-o glibtimer/a.out
+XFAIL_TESTS += glibtimer/gij.sh
+CLEANFILES += glibtimer/TestGlibTimerGC.class
+glibtimer/TestGlibTimerGC.class: $(glibtimer_FILES)
+	mkdir -p glibtimer
+	$(GCJ) -g -C -d . -I$(srcdir) \
+		-classpath $(FRYSK_GTK_CLASSPATH) \
+		$(srcdir)/glibtimer/TestGlibTimerGC.java
+glibtimer/gij.sh: $(glibtimer_FILES)
+	mkdir -p glibtimer
+	echo $(GIJ) -classpath .:$(FRYSK_GTK_CLASSPATH) \
+		-Djava.library.path=/usr/lib/frysk \
+		glibtimer.TestGlibTimerGC \
+		> glibtimer/gij.sh
+	chmod a+x glibtimer/gij.sh
+
